--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Vite + React</title>
 </head>
 
-<body class="w-100vw h-100vh bg-gray-900 text-white">
+<body class="h-screen w-screen relative bg-gray-900 text-white">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
